here is another ways of dealing with padding to have right alignment. previous commit did have right alignment. I am just trying different thing now. even though this is not correct in the sense that I like I have ignore or not used the css classes given in the exercise so it is not the "right-way" but still giving it a shot.

--- a/style.css
+++ b/style.css
@@ -17,12 +17,16 @@ header {
   max-width: 784px;
   margin-left: auto;
   margin-right: auto;
-  /* padding: 24px; */
+  padding: 8px 24px 24px 24px;
   background-color: white;
 }
 
+section.max-width-wrapper {
+  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+}
+
 .intro-chunk {
-  padding: 24px;
+  /* padding: 24px; */
 }
 
 main {
@@ -47,8 +51,8 @@ p {
   /* background-color: white; */
   /* padding-left: 16px; */
   /* padding-right: 16px; */
-  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
-  padding: 8px 24px 24px 24px;
+  /* border-bottom: 8px solid hsla(0, 0%, 60%, 1); */
+  /* padding: 8px 24px 24px 24px; */
 }
 
 .indented-heading {
